--- a/second.html
+++ b/second.html
@@ -151,10 +151,13 @@ label{
  </div>
 
 <br><br>
-<h3> About Tutor: </h3>
-<h4> //Name of the Tutor</h4>
-<h3> About course: </h3>
-<h4> //Course description</h2>
+<h3> CourseID: CSCI370</h3>
+<h3> Database Management</h3>
+<h3> Instructor: Liu Hizui</h3>
+<h3> About course: you learn stuff about databases</h3>
+<h3> overallRating: 4.5 &nbsp &nbsp &nbsp  teacherRating: 4.0</h3>
+<h3> workloadRating: 3.0 &nbsp &nbsp &nbsp difficultyRating: 4.2</h3>
+<br><br>
 <h3> Documents: </h3>
 <label for="example" class="b">
       </label>
