--- a/first.html
+++ b/first.html
@@ -15,7 +15,7 @@ body {
   margin: 0;
 }
 body{
-  background-color: #000000;
+  background-color: black;
 }
 .header {
   padding: 40px;
@@ -100,13 +100,13 @@ table{
 </style>
 <body>
   <div class="header">
-  <h1>Welcome to MyCourse Database</h1>
+  <h1>Welcome Tushar to MyCourse Database</h1>
 </div>
 
 <div class="navbar">
   <div class="search">
     <input type="text" class="searchTerm" placeholder="Search..">
-    <a href="second.html">
+    <a href="Second.html">
     <button type="button" class="searchButton">
         <i class="fa fa-search"></i>
      </button></a>
